[gd_scene load_steps=11 format=2]

[ext_resource path="res://scripts/IndividualObjectDome.gd" type="Script" id=1]
[ext_resource path="res://scripts/ObjectDome.gd" type="Script" id=2]

[sub_resource type="SpatialMaterial" id=9]
flags_transparent = true
flags_unshaded = true
flags_do_not_receive_shadows = true
flags_disable_ambient_light = true
params_cull_mode = 1
albedo_color = Color( 1, 1, 1, 0 )

[sub_resource type="SphereMesh" id=10]
material = SubResource( 9 )
radius = 10.0
height = 20.0

[sub_resource type="SpatialMaterial" id=3]
flags_transparent = true
flags_unshaded = true
flags_do_not_receive_shadows = true
flags_disable_ambient_light = true
params_cull_mode = 1
albedo_color = Color( 1, 1, 1, 0 )

[sub_resource type="SphereMesh" id=4]
material = SubResource( 3 )
radius = 10.0
height = 20.0

[sub_resource type="SpatialMaterial" id=5]
flags_transparent = true
flags_unshaded = true
flags_do_not_receive_shadows = true
flags_disable_ambient_light = true
params_cull_mode = 1
albedo_color = Color( 1, 1, 1, 0 )

[sub_resource type="SphereMesh" id=6]
material = SubResource( 5 )
radius = 10.0
height = 20.0

[sub_resource type="SpatialMaterial" id=7]
flags_transparent = true
flags_unshaded = true
flags_do_not_receive_shadows = true
flags_disable_ambient_light = true
params_cull_mode = 1
albedo_color = Color( 1, 1, 1, 0 )

[sub_resource type="SphereMesh" id=8]
material = SubResource( 7 )
radius = 10.0
height = 20.0

[node name="ObjectDome" type="Spatial"]
script = ExtResource( 2 )

[node name="Dome1" type="MeshInstance" parent="."]
layers = 1024
mesh = SubResource( 10 )
skeleton = NodePath("../Sphere")
script = ExtResource( 1 )

[node name="Dome2" type="MeshInstance" parent="."]
layers = 2048
mesh = SubResource( 4 )
skeleton = NodePath("../Sphere")
script = ExtResource( 1 )

[node name="Dome3" type="MeshInstance" parent="."]
layers = 4096
mesh = SubResource( 6 )
skeleton = NodePath("../Sphere")
script = ExtResource( 1 )

[node name="Dome4" type="MeshInstance" parent="."]
layers = 8192
mesh = SubResource( 8 )
skeleton = NodePath("../Sphere")
script = ExtResource( 1 )
